--- a/login.css
+++ b/login.css
@@ -1,1 +1,83 @@
-login css
+body{
+  margin: 0;
+  padding: 0;
+  background: url(./images/loginbackground.jpg);
+  background-size: cover;
+  background-position: center;
+  font-family: sans-serif;
+}
+
+
+.loginbox{
+  position: absolute;
+  width: 400px;
+  height: 450px;
+  color: #fff;
+  background: rgba(27, 32, 41, 0.5);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-sizing: border-box;
+  padding: 70px 40px;
+}
+
+
+.avatar{
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  position: absolute;
+  top: -50px;
+  left: 38%;
+}
+
+h1{
+  margin: 0;
+  padding: 0 0 20px;
+  text-align: center;
+  font-size: 22px;
+}
+
+.loginbox p{
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+}
+
+.loginbox input{
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.loginbox input[type="text"], input[type="password"]{
+  border: none;
+  border-bottom: 1px solid #fff;
+  background: transparent;
+  outline: none;
+  height: 40px;
+  font-size: 16px;
+}
+
+.loginbox input[type="submit"]{
+  margin-top: 10px;
+  border: none;
+  outline: none;
+  height: 40px;
+  background: rgb(105, 136, 194);
+  color: #fff;
+  font-size: 18px;
+  border-radius: 14px;
+}
+
+.loginbox input[type="submit"]:hover{
+  cursor: pointer;
+  background: rgb(167, 193, 242);
+  color: #fff;
+}
+
+a{
+  color: darkgrey;
+  text-decoration: none;
+  font-size: 13px;
+  line-height: 20px;
+}
