--- a/cover.css
+++ b/cover.css
@@ -12,6 +12,15 @@ div.row.featurette {
   margin: 1.5%;
 }
 
+.carousel-caption {
+  background-color: rgb(0,0,0); /* Fallback color */
+background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+color: white;
+font-weight: bold;
+border: 3px  #f1f1f1;
+z-index: 2;
+padding: 5%;
+}
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
