--- a/cover.css
+++ b/cover.css
@@ -12,6 +12,10 @@ div.row.featurette {
   margin: 1.5%;
 }
 
+.portraits{
+  border-radius: 0.5;
+}
+
 .carousel-caption {
   background-color: rgb(0,0,0); /* Fallback color */
 background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
