feed fully functional
can post and delete posts.
Cant comment yet

--- a/cover.css
+++ b/cover.css
@@ -1,3 +1,7 @@
+#logout-button{
+  text-decoration: none;
+}
+
 /* GLOBAL STYLES
 -------------------------------------------------- */
 /* Padding below the footer and lighter body text */
