--- a/dashboard.css
+++ b/dashboard.css
@@ -1,24 +1,24 @@
 
-
+header{
+}
 body{
-  background: url(./images/background1.jpg);
+  background: url(./images/dashboard_office.jpg);
 }
 
 
-nav{
-     margin-top: -2%;
- }
+
 
 ul{
     list-style-type: none;
 }
-#linksnav ul{
-  padding-bottom: 1em;
-}
+
 
 .d-flex{
   position: absolute;
   right: 2em;
+}
+
+#banner{
 }
 
 div{
