add pointer and css to li

--- a/searchstyle.css
+++ b/searchstyle.css
@@ -86,3 +86,12 @@ h1::after {
 #dataViewer:::-webkit-scrollbar-thumb {
   background: #ffffff;
 }
+
+ul li:hover {
+  background-color: white;
+  color: black;
+}
+
+li {
+  cursor: pointer;
+}
