back button on view profile

--- a/viewEmp.css
+++ b/viewEmp.css
@@ -1,3 +1,25 @@
+button {
+  position:absolute;
+  top: 14%;
+  background-color: white;
+  border: none;
+  color: rgb(184, 194, 209);
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 24px;
+}
+button:hover{
+  color: white;
+  background-color: rgb(184, 194, 209);
+}
+
+header{
+  position:absolute;
+  top: 0;
+}
+
 body{
     margin-top: 7%;
     color: black;
