--- a/viewEmp.css
+++ b/viewEmp.css
@@ -1,9 +1,9 @@
 button {
   position:absolute;
-  top: 14%;
+  top: 16%;
   background-color: white;
   border: none;
-  color: rgb(184, 194, 209);
+  color: black;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
