--- a/login.css
+++ b/login.css
@@ -63,7 +63,10 @@ h1{
   border: none;
   outline: none;
   height: 40px;
-  background: rgb(105, 136, 194);
+  background: transparent;
+  border-top: solid;
+  border-bottom: solid;
+  border-width: 1px;
   color: #fff;
   font-size: 18px;
   border-radius: 14px;
